--- a/algoritmus/二分查找模板.md
+++ b/algoritmus/二分查找模板.md
@@ -29,3 +29,5 @@ console.log(binarySearch([1, 3, 5, 7, 9], -1))
 console.log(binarySearch([1, 3, 5, 7, 9], 8))
 console.log(binarySearch([1, 3, 5, 7, 10], 3))
 ```
+
+二分查找算法时间复杂度是O(logn)。
